[gd_scene load_steps=8 format=3 uid="uid://dpfpl3qeuqi5i"]

[ext_resource type="Script" path="res://ui/screens/meta_upgrades_screen.gd" id="1_dklx8"]
[ext_resource type="Texture2D" uid="uid://benyfbl7qaij6" path="res://assets/ui/menu_background.png" id="2_au2f0"]
[ext_resource type="PackedScene" uid="uid://cdfw4ahyvd0a1" path="res://ui/components/meta_upgrade_card.tscn" id="2_kr4am"]
[ext_resource type="Resource" uid="uid://dg02n21cthhsw" path="res://resources/meta_upgrades/drop_chance.tres" id="3_irimn"]
[ext_resource type="PackedScene" uid="uid://8io24htcugal" path="res://ui/overlays/vignette.tscn" id="3_r7lak"]
[ext_resource type="PackedScene" uid="uid://bat0dhmgguogl" path="res://ui/components/sound_button.tscn" id="6_vl8qn"]
[ext_resource type="Texture2D" uid="uid://wnmdmt3p0nni" path="res://scenes/objects/pickups/experience_pickup/experience_vial.png" id="7_ahjud"]

[node name="MetaUpgradesScreen" type="CanvasLayer" groups=["meta_upgrade_card"]]
script = ExtResource("1_dklx8")
upgrade_card_scene = ExtResource("2_kr4am")
meta_upgrades = Array[Resource("res://resources/meta_upgrades/meta_upgrade.gd")]([ExtResource("3_irimn")])

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_au2f0")
expand_mode = 3

[node name="Vignette" parent="." instance=ExtResource("3_r7lak")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleMarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 0

[node name="BackButton" parent="VBoxContainer/TitleMarginContainer" instance=ExtResource("6_vl8qn")]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TitleMarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"OutlineLabel"
theme_override_font_sizes/font_size = 32
text = "Upgrades"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleMarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleMarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Control" type="Control" parent="VBoxContainer/TitleMarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/TitleMarginContainer/HBoxContainer/HBoxContainer/Control"]
position = Vector2(-3, -1)
texture = ExtResource("7_ahjud")

[node name="ExperienceLabel" type="Label" parent="VBoxContainer/TitleMarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"OutlineLabel"
text = "100"

[node name="ResetButton" parent="VBoxContainer/TitleMarginContainer/HBoxContainer" instance=ExtResource("6_vl8qn")]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
tooltip_text = "Press 3 times to reset"
text = "Reset"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 16

[node name="UpgradeCardsGrid" type="GridContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 24
columns = 3

[node name="MetaUpgradeCard" parent="VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/UpgradeCardsGrid" instance=ExtResource("2_kr4am")]
layout_mode = 2

[node name="MetaUpgradeCard2" parent="VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/UpgradeCardsGrid" instance=ExtResource("2_kr4am")]
layout_mode = 2

[node name="MetaUpgradeCard3" parent="VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/UpgradeCardsGrid" instance=ExtResource("2_kr4am")]
layout_mode = 2

[node name="MetaUpgradeCard4" parent="VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/UpgradeCardsGrid" instance=ExtResource("2_kr4am")]
visible = false
layout_mode = 2
